--- a/css/popup.wnd/popup.wnd.css
+++ b/css/popup.wnd/popup.wnd.css
@@ -121,5 +121,5 @@
     border-radius: 5px; 
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px; 
-    height:30px;
+    height:auto;
 }
